ex-1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-string-app-service
spec:
  selector:
    app: random-string-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
